// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Gabapentin Integration Test parses gabapentin 1`] = `
{
  "components": [
    {
      "atoms": "C",
      "attachments": {
        "4": [
          {
            "atoms": [
              "C",
              "C",
              "O",
            ],
            "attachments": {
              "2": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    "=",
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Gabapentin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v2 = Linear(['C', 'C', 'O']);
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(2, v3);
export const v5 = v1.attach(4, v4, { sibling: true });
export const v6 = Linear(['C', 'N']);
export const v7 = Molecule([v5, v6]);"
`;

exports[`Pregabalin Integration Test parses pregabalin 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
  ],
  "attachments": {
    "2": [
      {
        "atoms": [
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
        ],
        "type": "linear",
      },
    ],
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "O",
        ],
        "attachments": {
          "2": [
            {
              "atoms": [
                "O",
              ],
              "attachments": {},
              "bonds": [
                "=",
              ],
              "type": "linear",
            },
          ],
        },
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Pregabalin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'N']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Linear(['C', 'C', 'O']);
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(2, v5);
export const v7 = v3.attach(4, v6);"
`;

exports[`Amitriptyline Integration Test parses amitriptyline 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 11,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 1,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 5,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Amitriptyline Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(2, v2);
export const v4 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, null, null, '=', null, '=', null, '=', null], leadingBond: '=' });
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 1, bonds: ['=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 5, bonds: ['=', null, '=', null, '=', null] });
export const v7 = FusedRing([v4, v5, v6]);
v7.rings[0].metaPositions = [6, 7, 12, 13, 14, 15, 16, 17, 18, 19, 20];
v7.rings[0].metaStart = 6;
v7.rings[0].metaEnd = 20;
v7.rings[1].metaPositions = [7, 8, 9, 10, 11, 12];
v7.rings[1].metaStart = 7;
v7.rings[1].metaEnd = 12;
v7.rings[2].metaPositions = [15, 16, 17, 18, 19, 20];
v7.rings[2].metaStart = 15;
v7.rings[2].metaEnd = 20;
v7.metaAllPositions = [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20];
v7.metaBranchDepthMap = new Map([[6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0]]);
v7.metaAtomValueMap = new Map([[6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C']]);
v7.metaBondMap = new Map([[6, '='], [8, '='], [10, '='], [12, '='], [16, '='], [18, '='], [20, '=']]);
v7.metaRingOrderMap = new Map([[6, [1, 1]], [7, [2, 2, 1]], [8, [2]], [9, [2]], [10, [2]], [11, [2]], [12, [2, 1]], [13, [1]], [14, [1]], [15, [3, 3, 1]], [16, [3, 1]], [17, [3, 1]], [18, [3, 1]], [19, [3, 1]], [20, [3, 1]]]);
v7.metaLeadingBond = '=';
v7.metaLeadingBond = '=';
export const v8 = Molecule([v3, v7]);"
`;

exports[`Duloxetine Integration Test parses duloxetine 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "5": [
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 5,
            "substitutions": {
              "5": "S",
            },
            "type": "ring",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Duloxetine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(5, 'S');
export const v4 = v1.attach(5, v3);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: ['=', null, '=', null, '=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: ['=', null, '=', null, '=', null] });
export const v7 = v5.fuse(4, v6);
v7.rings[0].metaPositions = [11, 12, 13, 14, 15, 16, 17, 18, 19, 20];
v7.rings[0].metaStart = 11;
v7.rings[0].metaEnd = 20;
v7.rings[1].metaPositions = [15, 16, 17, 18, 19, 20];
v7.rings[1].metaStart = 15;
v7.rings[1].metaEnd = 20;
v7.metaAllPositions = [11, 12, 13, 14, 15, 16, 17, 18, 19, 20];
v7.metaBranchDepthMap = new Map([[11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0], [18, 0], [19, 0], [20, 0]]);
v7.metaAtomValueMap = new Map([[11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C']]);
v7.metaBondMap = new Map([[12, '='], [14, '='], [16, '='], [18, '='], [20, '=']]);
v7.metaRingOrderMap = new Map([[11, [2, 2]], [12, [2]], [13, [2]], [14, [2]], [15, [3, 3, 2]], [16, [3, 2]], [17, [3, 2]], [18, [3, 2]], [19, [3, 2]], [20, [3, 2]]]);
export const v8 = Molecule([v4, v7]);"
`;

exports[`Carbamazepine Integration Test parses carbamazepine 1`] = `
{
  "components": [
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 7,
          "substitutions": {
            "7": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Carbamazepine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 0, 1] });
export const v2 = Ring({ atoms: 'C', size: 7, ringNumber: 2, offset: 3, bonds: [null, null, '=', null, '=', null, null], leadingBond: '=' });
export const v3 = v2.substitute(7, 'N');
export const v4 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
export const v5 = FusedRing([v1, v3, v4]);
v5.rings[0].metaPositions = [0, 1, 2, 3, 4, 5];
v5.rings[0].metaStart = 0;
v5.rings[0].metaEnd = 5;
v5.rings[1].metaPositions = [3, 4, 6, 7, 8, 13, 14];
v5.rings[1].metaStart = 3;
v5.rings[1].metaEnd = 14;
v5.rings[2].metaPositions = [8, 9, 10, 11, 12, 13];
v5.rings[2].metaStart = 8;
v5.rings[2].metaEnd = 13;
v5.metaAllPositions = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
v5.metaBranchDepthMap = new Map([[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 1], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0]]);
v5.metaAtomValueMap = new Map([[0, 'C'], [1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'N']]);
v5.metaBondMap = new Map([[1, '='], [3, '='], [5, '='], [7, '='], [9, '='], [11, '='], [13, '=']]);
v5.metaRingOrderMap = new Map([[0, [1, 1]], [1, [1]], [2, [1]], [3, [2, 1, 2]], [4, [1, 2]], [5, [1]], [6, [2]], [7, [2]], [8, [3, 3, 2]], [9, [3]], [10, [3]], [11, [3]], [12, [3]], [13, [3, 2]], [14, [2]]]);
export const v6 = Linear(['C', 'N']);
export const v7 = Linear(['O'], ['=']);
export const v8 = v6.attach(1, v7);
export const v9 = Molecule([v5, v8]);"
`;

exports[`Valproic Acid Integration Test parses valproic acid 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
    "5": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Valproic Acid Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C', 'C', 'C']);
export const v3 = v1.attach(4, v2);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(5, v4);"
`;
